# SDL-Repo

./: README.md
CMake/BasicImageDrawing/: README.md
CMake/BasicImageDrawing/include/: Game.h
CMake/BasicImageDrawing/src/: Game.cpp
CMake/FirstProject/: CMakeLists.txt  README.md
CMake/TextureManager/: .gitignore  README.md
CMake/TextureManager/include/: TextureManager.h
Codeblocks/: README.md
Codeblocks/DrawBMP/: DrawBMP.cbp  Game.cpp  Game.h
Codeblocks/DrawIMG/: DrawIMG.cbp  Game.cpp  Game.h
Codeblocks/GameClass/: .gitignore  Game.cpp  Game.h  GameClass.cbp  main.cpp
Codeblocks/HelloWorld/: .gitignore  HelloWorld.cbp  HelloWorld.depend  main.cpp
Configurations/SDL_CODEBLOCK/: README.md
Configurations/SDL_CODEBLOCK_CMAKE/: .gitignore  CMakeLists.txt  README.md  main.cpp
Configurations/SDL_VSCODE_CMAKE/: CMakeLists.txt  README.md  main.cpp
GettingStarted/BasicImageDrawing/: README.md
GettingStarted/BasicImageDrawing/include/: Game.h
GettingStarted/BasicImageDrawing/src/: Game.cpp  main.cpp
GettingStarted/FirstProject/: README.md
GettingStarted/FirstProject/include/: Game.h  IncludeNamespace.h
GettingStarted/FirstProject/src/: Game.cpp  main.cpp
GettingStarted/TextureManager/: CMakeLists.txt
GettingStarted/TextureManager/include/: Game.h  TextureManager.h
GettingStarted/TextureManager/src/: Game.cpp  TextureManager.cpp
